--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,38 @@ ul {
   padding: 0;
 }
 
+h1 {
+  font-weight: 600;
+  font-size: 2.1em;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 1.6em;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 1.3em;
+}
+
+h4 {
+  font-weight: 400;
+  font-size: 1.2em;
+}
+
+/* PROJECT-VIEW */
+.project h3 {
+  text-align: center;
+  margin-bottom: .8em;
+  font-weight: 500; /* Lighten text, default h3 is bold (700) */
+}
+
+.project p { /*Text as caption*/
+  text-align: center;
+  font-style: italic;
+}
+
 /* HEADER */
 
 .header {
