--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,18 +47,6 @@ h4 {
   font-size: 1.2em;
 }
 
-/* PROJECT-VIEW */
-.project h3 {
-  text-align: center;
-  margin-bottom: .8em;
-  font-weight: 500; /* Lighten text, default h3 is bold (700) */
-}
-
-.project p { /*Text as caption*/
-  text-align: center;
-  font-style: italic;
-}
-
 /* HEADER */
 
 .header {
@@ -251,6 +239,26 @@ h4 {
   padding-top: .75em;
   width: 100%;
   max-width: 100em;
+}
+
+/* PROJECT-VIEW */
+.project h3 {
+  text-align: center;
+  margin-bottom: .8em;
+  font-weight: 500; /* Lighten text, default h3 is bold (700) */
+}
+
+.project p { /*Text as caption*/
+  text-align: center;
+  font-style: italic;
+}
+
+.project img {
+  height: auto;
+  max-width: 85%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* GRID */
