--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,6 +248,10 @@ h4 {
   font-weight: 500; /* Lighten text, default h3 is bold (700) */
 }
 
+.project a {
+  font-weight: 500;
+}
+
 .project p { /*Text as caption*/
   text-align: center;
   font-style: italic;
