Create site logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 :root {
-  --main-bg-color: #f5f3f0;
+  --main-bg-color: #f8f8f8;
   --main-txt-color: #262626;
   --bold-bg-color: #2f8eb6;
-  --secondary-bg-color: #48D1CC;
+  --secondary-bg-color: #ccb9cf;
   --tertiary-bg-color: #7eb7cf;
 }
 
