--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,9 @@ body {
 }
 
 a {
-  text-decoration: none;
+  /* text-decoration: none; */
   color: var(--main-txt-color);
-  font-weight: 600;
+  /* font-weight: 400; */
 }
 
 ul {
@@ -86,6 +86,7 @@ h4 {
   margin-right: .25em;
   font-weight: normal;
   text-align: center;
+  text-decoration: none;
 } 
 
 .navbar a:hover:not(.active) {
